modify dockerfile to include build

--- a/spring-template/Dockerfile
+++ b/spring-template/Dockerfile
@@ -1,4 +1,6 @@
 FROM gradle:6.8-jdk11-openj9
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+WORKDIR /home/gradle
+USER gradle
+COPY . .
+RUN gradle bootJar
+ENTRYPOINT ["java","-jar","build/libs/spring-template-0.0.1-SNAPSHOT.jar"]
