--- a/express-template/package.json
+++ b/express-template/package.json
@@ -10,6 +10,8 @@
   "author": "daniel@lightfeather.io",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "request": "^2.88.2"
   }
 }
